# 0x0.AI

./: Cargo.toml  README.md
.0x0-ai/: project.toml
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DISTRO_NOTES.md  INSTALL.md  PLUGIN_GUIDE.md  SAFETY_MODEL.md  TOOL_INSTALL.md  TROUBLESHOOTING.md  USER_GUIDE.md  WEB_RESEARCH.md  WORKFLOWS.md
examples/: config.example.toml  workflow.sh  writeup-example.md
examples/plugins/: extract-flag.toml  extract_flag.py
scripts/: install.sh  uninstall.sh  update.sh
src/: app.rs  cli.rs  config.rs  ingest.rs  lib.rs  main.rs  output.rs  planner.rs  plugins.rs  policy.rs  report.rs  storage.rs  util.rs  web_lab.rs
src/categories/: ai.rs  blockchain.rs  cloud.rs  crypto.rs  forensics.rs  hardware.rs  misc.rs  mobile.rs  mod.rs  network.rs  osint.rs  pwn.rs  reverse.rs  stego.rs  web.rs
src/providers/: anthropic.rs  gemini.rs  generic.rs  local.rs  mod.rs  openai_compat.rs
src/research/: local.rs  mod.rs  web.rs
src/tools/: mod.rs  package.rs
tests/: cli_smoke.rs  package_manager.rs  policy_safety.rs  provider_mock.rs  report_golden.rs  web_research_cache.rs
tests/fixtures/crypto/: challenge.txt
tests/fixtures/misc/: readme.txt
tests/fixtures/reports/: expected_writeup.md
tests/fixtures/web/: index.html
