[package]
name = "zerox0_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
atty = "0.2.14"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive"] }
directories = "6.0.0"
hex = "0.4.3"
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.11.3"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono", "serde_json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
shell-escape = "0.1.5"
sysinfo = "0.37.0"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
wait-timeout = "0.2.1"
walkdir = "2.5.0"
which = "8.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
httpmock = "0.8.0"
predicates = "3.1.3"
tempfile = "3.23.0"

[[bin]]
name = "0x0"
path = "src/main.rs"

[[bin]]
name = "ox"
path = "src/bin/ox.rs"
